--- a/index.html
+++ b/index.html
@@ -1,25 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Three.js Plane & Points</title>
-  <style>
-    body { margin: 0; overflow: hidden; }
-    #tooltip {
-      position: absolute;
-      padding: 4px 8px;
-      background: rgba(0, 0, 0, 0.7);
-      color: white;
-      font-size: 12px;
-      border-radius: 4px;
-      pointer-events: none;
-      display: none;
-    }
-  </style>
-</head>
-<body>
-<div id="tooltip"></div>
-<script type="module" src="main.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vite + React</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
